
FEATURE  [SCRAPERS] Fix MobyGames scraper and use new MobyGames API.
         See http://www.mobygames.com/info/api

FEATURE  [SCRAPERS] Fix TheGamesDB scraper.
         There has been a change in the web site including a new API.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/75

WIP NOW  [SCRAPERS] Have a look at ScreenScraper and consider it for an online scraper.
         See https://www.screenscraper.fr/
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2622839#pid2622839

WIP      [SCRAPERS] Fix ArcadeDB scraper. Use the API.
         It has been a while since this scraper is not working any more.

WIP      [SCRAPERS] Fix GameFAQs scraper.
         It has been a while since this scraper is not working any more.
         GameFAQs does not have an API. Should this scraper being removed???

WIP      [SCRAPERS] Update MAME Offline Scraper database to version latest version.

WIP      [SCRAPERS] Massive upgrade of AEL Offline scraper database.

WIP      [SCRAPERS] Add support for ScummVM platform in the Offline Scraper.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2629084#pid2629084

WIP      [CORE] Support for Advanced MAME Launcher exported virtual launchers.
         This feature requires AML 0.9.X
         AML creates the Category "Arcade (AML)" and places the exported launchers there.

WIP      [CORE] New properties to notify skins about Std launchers, ROM launchers, Categories,
         and number of items in a Launcher.

WIP      [CORE] Option to clean dead ROMs in "Recently played ROMs" and "Most played ROMs"

WIP      [CORE] Option to clean individual ROMs in "Recently played ROMs" and "Most played ROMs"

WIP      [CORE] Create a couple of new ROM context menus, "Manage Recently played ROM" and 
         "Manage Most played ROM". Both will have the following options: "Delete this ROM",
         "Delete all Unlinked/Broken ROMs".