@@ -288,20 +288,20 @@ SCRAPER_LIST = [
 # Make sure this matches the scraper list in settings.xml or bad things will happen.
 SCRAP_METADATA_SETTINGS_LIST = [
     SCRAPER_NULL_ID, SCRAPER_AEL_OFFLINE_ID,
-    SCRAPER_THEGAMESDB_ID, SCRAPER_MOBYGAMES_ID, SCRAPER_GAMEFAQS_ID,
+    SCRAPER_THEGAMESDB_ID, SCRAPER_MOBYGAMES_ID, SCRAPER_SCREENSCRAPER_ID,
 ]
 
 SCRAP_ASSET_SETTINGS_LIST = [
     SCRAPER_NULL_ID,
-    SCRAPER_THEGAMESDB_ID, SCRAPER_MOBYGAMES_ID, SCRAPER_GAMEFAQS_ID,
+    SCRAPER_THEGAMESDB_ID, SCRAPER_MOBYGAMES_ID, SCRAPER_SCREENSCRAPER_ID,
 ]
 
 SCRAP_METADATA_MAME_SETTINGS_LIST = [
     SCRAPER_NULL_ID, SCRAPER_AEL_OFFLINE_ID,
-    SCRAPER_ARCADEDB_ID, SCRAPER_THEGAMESDB_ID, SCRAPER_MOBYGAMES_ID, SCRAPER_GAMEFAQS_ID,
+    SCRAPER_ARCADEDB_ID, SCRAPER_SCREENSCRAPER_ID, SCRAPER_THEGAMESDB_ID, SCRAPER_MOBYGAMES_ID,
 ]
 
 SCRAP_ASSET_MAME_SETTINGS_LIST = [
     SCRAPER_NULL_ID,
-    SCRAPER_ARCADEDB_ID, SCRAPER_THEGAMESDB_ID, SCRAPER_MOBYGAMES_ID, SCRAPER_GAMEFAQS_ID,
+    SCRAPER_ARCADEDB_ID, SCRAPER_SCREENSCRAPER_ID, SCRAPER_THEGAMESDB_ID, SCRAPER_MOBYGAMES_ID,
 ]
