@@ -549,7 +549,7 @@ def text_get_multidisc_info(ROM_FN):
 def text_get_URL_extension(url):
     path = urlparse.urlparse(url).path
     ext = os.path.splitext(path)[1]
-    
+
     return ext
 
 #
