@@ -93,16 +93,18 @@ FEATURE  [SCRAPERS] Fix TheGamesDB scraper.
          There has been a change in the web site including a new API.
          See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/75
 
-WIP NOW  [SCRAPERS] Have a look at ScreenScraper and consider it for an online scraper.
+FEATURE  [SCRAPERS] Have a look at ScreenScraper and consider it for an online scraper.
          See https://www.screenscraper.fr/
          See https://forum.kodi.tv/showthread.php?tid=287826&pid=2622839#pid2622839
 
-WIP      [SCRAPERS] Fix ArcadeDB scraper. Use the API.
+WIP NOW  [SCRAPERS] Fix ArcadeDB scraper. Use the API.
          It has been a while since this scraper is not working any more.
 
 WIP      [SCRAPERS] Fix GameFAQs scraper.
          It has been a while since this scraper is not working any more.
          GameFAQs does not have an API. Should this scraper being removed???
+
+WIP      [SCRAPERS] Fix AEL Offline Scraper.
 
 WIP      [SCRAPERS] Update MAME Offline Scraper database to version latest version.
 
